[GOHW-3]: add pagination for grpc list request
